fix(messenger-feed): re-position waypoint for visibility and trigger loading more posts in feed view

--- a/src/components/messenger/feed/feed-view-container/styles.scss
+++ b/src/components/messenger/feed/feed-view-container/styles.scss
@@ -7,4 +7,10 @@
     box-sizing: border-box;
     color: var(--color-greyscale-10);
   }
+
+  &__waypoint {
+    overflow-anchor: none;
+    position: relative;
+    bottom: 700px;
+  }
 }
